--- a/template/BaiduAntivirusWebsite.html
+++ b/template/BaiduAntivirusWebsite.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
     <link rel="stylesheet" href="../css/template.css">
-    <title>Child Gain Chews</title>
+    <title>Baidu Antivirus Website Design</title>
     <style>
         * {
             padding: 0;
@@ -15,8 +15,8 @@
         }
         
          ::selection {
-            background: #fff100;
-            color: rgb(0, 0, 0);
+            /*background: #fff100;
+            color: rgb(0, 0, 0);*/
         }
         
         .cpage {
@@ -36,7 +36,8 @@
         }
         
         .content_text_right {
-            width: 3rem;
+            margin-left:.225rem;
+            width: 1.75rem;
         }
         
         .header div {
@@ -63,8 +64,8 @@
             width: 100%;
             margin-top: 100px;
             margin: 0 auto;
-            /* 子页面背景 */
-            background-color: #ffffff;
+            /* 子页面背景
+            background-color: #ffffff;*/
         }
         
         .middle .banner {
@@ -72,8 +73,8 @@
             padding-top: .325rem;
             width: 90%;
             margin: 0 auto;
-            height: 500px;
-            background-color: #777777;
+            /*height: 500px;
+            background-color: #777777;*/
         }
         
         .middle .banner img {
@@ -83,7 +84,7 @@
             height: 100%; */
         }
         
-        .middle .part1 {
+        .middle .lr {
             margin-top: .15625rem;
             display: flex;
             width: 90%;
@@ -92,42 +93,42 @@
             justify-content: space-between;
         }
         
-        .part1 .item {
+        .lr .item {
             width: 100%;
             height: 2.734375rem;
         }
         
-        .part1 .item div {
+        .lr .item div {
             width: 48%;
             height: 2.734375rem;
-            background-color: #777777;
+            /*background-color: #777777;*/
         }
         
-        .part1 .left {
+        .lr .content_left {
             display: flex;
-            justify-content: flex-start;
+            /*justify-content: flex-start;*/
+            justify-content:space-between;
             margin-bottom: 0.2rem;
         }
         
-        .part1 .right {
+        .lr .content_right {
             display: flex;
             justify-content: flex-end;
         }
         
         .part1 .item img {
-            width: 100%;
-            height: 100%;
+            width: Auto;
+            height: Auto;
         }
         
-        .part2 {
+        .content {
             width: 90%;
             margin: 0 auto;
-            height: 3.25rem;
-            background-color: rgb(27, 27, 27);
+            height: Auto;
             margin-top: .195313rem;
         }
         
-        .part2 img {
+        .content img {
             width: 100%;
             height: 100%;
         }
@@ -137,7 +138,7 @@
             height: 12.5rem;
             background-color: rgb(236, 54, 54);
             margin-top: .195313rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
         }
         
         .other {
@@ -153,7 +154,7 @@
             width: 90%;
             margin: 0 auto;
             margin-top: .1875rem;
-            margin-bottom: 66px;
+            margin-bottom: 20px;
             display: flex;
             flex-wrap: wrap;
             background-color: rgba(238, 238, 238);
@@ -162,7 +163,7 @@
         .foot .item {
             box-sizing: border-box;
             width: 33.333333%;
-            height: 2.34375rem;
+           /* height: 2.34375rem; */
         }
         
         .foot .item img {
@@ -195,41 +196,31 @@
                 <span>Baidu Antivirus</span>
                 <p><br>Role</p>
                 <span>Character Design </span>
-                <span>UI </span>
-                <span>UE</span>
+                <span>UI & UE </span>
                 <span>Web Design </span>
                 </span>
             </div>
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="banner">
-                <img src="../static/info (3).jpg" alt="">
-            </div>
-            <div class="part1">
-                <div class="item left">
-                    <div class="">
-                        <img src="" alt=""></div>
+            <div class="content"><img src="../static/Baidu/Baidu1.png" alt=""></div>
+            <div class="content"><img src="../static/Baidu/Baidu2.png" alt=""></div>
+            <!--<div class="banner">
+            </div>-->
+            <div class="lr">
+                <div class="content_left"><img src="../static/Baidu/Baidu4.png" alt=""><img src="../static/Baidu/Baidu3.png" alt=""></div>
+                <!--<div class="content_right"></div>-->
                 </div>
-                <div class="item right">
-                    <div class="">
-                        <img src="" alt=""></div>
-                </div>
-            </div>
-            <div class="part2">
+            <div class="content"><img src="../static/Baidu/baidu.gif" alt=""></div>
 
+            <!-- 底部
+             <div class="other">Other Projects
             </div>
-            <!-- 底部 -->
-            <!-- <div class="other">Other Projects
-            </div> -->
             <div class="foot" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
                 <div class="item"><img src="../static/other.png" alt=""></div>
                 <div class="item"><img src="../static/other.png" alt=""></div>
                 <div class="item"><img src="../static/other.png" alt=""></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
+            </div>-->
         </div>
 </body>
 
