--- a/template/BoumiMonitorApp.html
+++ b/template/BoumiMonitorApp.html
@@ -204,9 +204,8 @@
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="content"><img src="../static/Boumi/Boumi1.png" alt=""></div>
-            <div class="content"><img src="../static/Boumi/Boumi2.png" alt=""></div>
-            <div class="content"><img src="../static/Boumi/Boumi3.png" alt=""></div>
+            <div class="content"><img src="../static/Boumi/Boumi.png" alt=""></div>
+
 
            <!-- <div class="part1">
                 <div class="item"><img src="../static/Boumi/Boumi1.png" alt=""></div>
