--- a/template/ChildGainChews.html
+++ b/template/ChildGainChews.html
@@ -126,24 +126,21 @@
             margin: 0 auto;
             height: Auto;
             margin-top: .195313rem;
+            font: 500 .125rem "Roboto";
+            color: #4a4a44;
         }
 
         .content img {
             width: 100%;
             height: 100%;
+
         }
 
-        .part3 {
-            width: 100%;
-            height: 12.5rem;
-            background-color: rgb(236, 54, 54);
-            margin-top: .195313rem;
-            margin-bottom: 0.5rem;
-        }
+
 
         .other {
             margin-top: 96px;
-            font: 500 .125rem "Roboto";
+            font: 500 .325rem "Roboto";
             width: 100vw;
             margin: 0 auto;
             height: 100px;
@@ -211,6 +208,7 @@
        <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="content"><img src="../static/ChildGainChews/childchews1.png" alt=""></div>
             <div class="content"><img src="../static/ChildGainChews/childchews2.png" alt=""></div>
+            <div class="content"><p> Animation Promo Video</p><iframe width=100% height="600" src="https://www.youtube.com/embed/GrDKt7NwfPs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <!--<img src="../static/info (3).png" alt="">
             </div>
             <div class="part1">
@@ -219,12 +217,12 @@
             </div>
             <div class="part2"><img src="../static/ChildGainChews/childchews1.png" alt=""></div>
             <div class="part2"><img src="../static/ChildGainChews/childchews2.png" alt=""></div>-->
-            <div class="part1">
-                 <div class="item"><img src="../static/ChildGainChews/childchews4.png" alt=""></div></div>
+
+            <div class="content"><img src="../static/ChildGainChews/childchews3.png" alt=""></div>
             <!-- 自动播放autoplay=1
-            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
+
         </div>-->
-        <!-- 底部 -->
+        <!-- 底部
         <div class="other">Other Projects</div>
         <div class="foot" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="item"><img src="../static/other.png" alt=""></div>
@@ -234,7 +232,7 @@
             <div class="item"></div>
             <div class="item"></div>
         </div>
-    </div>
+    </div>-->
 </body>
 
 </html>
