--- a/template/Posters.html
+++ b/template/Posters.html
@@ -127,7 +127,7 @@
             height: Auto;
             margin-top: .195313rem;
             font: 500 .125rem "Roboto";
-            color: #4a4a44;;
+            color: #4a4a44;
             text-height: 130%;
         }
 
