--- a/template/BaiduAntivirusWebsite.html
+++ b/template/BaiduAntivirusWebsite.html
@@ -103,17 +103,24 @@
             height: 2.734375rem;
             /*background-color: #777777;*/
         }
-        
+         .lr img {
+            width: 48%;
+            height: 2.734375rem;
+            /*background-color: #777777;*/
+        }
+
         .lr .content_left {
             display: flex;
             /*justify-content: flex-start;*/
             justify-content:space-between;
             margin-bottom: 0.2rem;
+
         }
         
         .lr .content_right {
             display: flex;
             justify-content: flex-end;
+            width:100%;
         }
         
         .part1 .item img {
@@ -208,7 +215,7 @@
             <!--<div class="banner">
             </div>-->
             <div class="lr">
-                <div class="content_left"><img src="../static/Baidu/Baidu4.png" alt=""><img src="../static/Baidu/Baidu3.png" alt=""></div>
+                <div class="content_left"><img src="../static/Baidu/Baidu3.png" alt=""><img src="../static/Baidu/Baidu4.png" alt=""></div>
                 <!--<div class="content_right"></div>-->
                 </div>
             <div class="content"><img src="../static/Baidu/baidu.gif" alt=""></div>
