--- a/template/JiayouLogisticsWebsite.html
+++ b/template/JiayouLogisticsWebsite.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
     <title>Jiayou Logisitic Website</title>
     <style>
-         * {
+               * {
             padding: 0;
             margin: 0;
         }
@@ -37,7 +37,7 @@
 
         .content_text_right {
             margin-left:.225rem;
-            width: 2.25rem;
+            width: 3.75rem;
         }
 
         .header div {
@@ -126,24 +126,21 @@
             margin: 0 auto;
             height: Auto;
             margin-top: .195313rem;
+            font: 500 .125rem "Roboto";
+            color: #4a4a44;
         }
 
         .content img {
             width: 100%;
             height: 100%;
+
         }
 
-        .part3 {
-            width: 100%;
-            height: 12.5rem;
-            background-color: rgb(236, 54, 54);
-            margin-top: .195313rem;
-            margin-bottom: 0.5rem;
-        }
+
 
         .other {
             margin-top: 96px;
-            font: 500 .125rem "Roboto";
+            font: 500 .325rem "Roboto";
             width: 100vw;
             margin: 0 auto;
             height: 100px;
@@ -195,8 +192,7 @@
                 <p>Client</p>
                 <span>JiaYou Logistics Ltd.</span>
                 <p><br>Role</p>
-                <span>UI </span>
-                <span>UE </span>
+                <span>UI & UE </span>
                 <span>Web Design</span>
                 <span>Testing</span>
                 </span>
@@ -204,8 +200,8 @@
         </div>
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="content"><img src="../static/Jiayou.png" alt="">
-            </div>
+            <div class="content"><img src="../static/Jiayou/Jiayou1.png" alt=""></div>
+            <div class="content"><img src="../static/Jiayou/Jiayou2.png" alt=""></div>
            <!-- <div class="part1">
                 <div class="item"><img src="../static/info (1).jpg" alt=""></div>
                 <div class="item"><img src="../static/info (2).jpg" alt=""></div>
@@ -225,7 +221,7 @@
             <div class="item"></div>
             <div class="item"></div>
         </div>-->
-    </div>
+
 </body>
 
 </html>
