--- a/template/BoumiMonitorApp.html
+++ b/template/BoumiMonitorApp.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
     <title>Boumi Monitior App</title>
     <style>
@@ -37,7 +39,7 @@
 
         .content_text_right {
             margin-left:.225rem;
-            width: 3rem;
+            width: 2.75rem;
         }
 
         .header div {
@@ -188,7 +190,7 @@
         <div class="header">
             <div class="content_text_left">
                 <p>Boumi Monitior App</p>
-                <span>Boumi monitor is a blood pressure monitor and its app design is mainly based on middle-aged and elderly users of the target customer group. The main function of the app is multi-user login,  blood pressure measurement recording, measurement data storage, and daily health measurement analysis, and the articles/news feeds and reading, etc. I served as the UE, user interaction and visual design for this project.</span>
+                <span>Boumi monitor is a smart blood pressure monitor and its app design is mainly based on the target customer group, that is, middle-aged and elderly users. The main functions of the app are multi-user login, blood pressure measurement recording, measurement data storage, daily health analysis, articles/news feeds and reading, etc. I was responsible for UE, user interaction, visual design, and more for this project.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
