--- a/template/ChildGainChews.html
+++ b/template/ChildGainChews.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
     <title>Child Gain Chews</title>
     <style>
@@ -185,7 +187,7 @@
         <div class="header">
             <div class="content_text_left">
                 <p>Child Gain Chews</p>
-                <span>This series of products is an original R&B of freeze-dried nutritional snacks for children aged 1-12. I have participated in product development from the product conception stage to market research, brand positioning, cost accounting, price management and marketing strategies, brand image etc. Furthermore, I directed attractive cartoon characters’ processes, and independently designed a wide range of visual systems and different specifications of packaging with supervising overseas printing and transportation，and oversee and guided the production and release of marketing collaterals.</span>
+                <span>This series of products are freeze-dried nutritional snacks for children aged 1-12 with original research and development. I have participated in product development from the product conception stage, market research, brand positioning, cost accounting, price management to marketing strategies, brand image, etc. Furthermore, I directed attractive cartoon characters’ creation processes, independently designed a wide range of visual systems and packaging with different specifications, supervised overseas printing and transportation, and oversaw and guided promotional video preparation and release.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
