--- a/template/JiayouLogisticsWebsite.html
+++ b/template/JiayouLogisticsWebsite.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
-    <title>Jiayou Logisitic Website</title>
+    <title>Jiayou Logistics Website</title>
     <style>
                * {
             padding: 0;
@@ -36,8 +38,8 @@
         }
 
         .content_text_right {
-            margin-left:.225rem;
-            width: 3.75rem;
+            margin-left:.325rem;
+            width: 1.88rem;
         }
 
         .header div {
@@ -185,7 +187,7 @@
         <div class="header">
             <div class="content_text_left">
                 <p>Jiayou Logistics Website</p>
-                <span>Jiayou is a chinses logistics company. Through learning and exchanging the work process and needs of customers, I cooperated with the development department to customize the official website for them. I am responsible for UI and website design.</span>
+                <span>Jiayou is a Chinese logistics company. Through learning and understanding the work process and needs of the customer, I cooperated with the development department to customize the official website for the customer. I was responsible for UI and website design.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
