--- a/template/TheTributetoClassic.html
+++ b/template/TheTributetoClassic.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
     <title>The Tribute to Classic</title>
     <style>
@@ -36,8 +38,8 @@
         }
 
         .content_text_right {
-            margin-left:.225rem;
-            width: 3.75rem;
+            margin-left:.325rem;
+            width: 3.85rem;
         }
 
         .header div {
@@ -188,7 +190,7 @@
         <div class="header">
             <div class="content_text_left">
                 <p>The Tribute to Classic</p>
-                <span>The customer selected the fruits and vegetables commonly used in freeze-drying packaging to make 2 series / 4 single products. After in-depth communication and learning with product development and sales departments, I redefined the concept of the product, optimized the packaging form methods and materials, and reduced the product costs and budget, and reorganized market strategy. Paying tribute to the world's famous paintings with the classic selection of freeze-drying technology, the comic style has created a new and fashionable brand image of the brand, independently designed the images, visiual, packaging design and related promotional materials of this series, and delivered it for printing and transportation.</span>
+                <span>The client selected the fruits and vegetables commonly used in freeze-drying packaging to make 2 series / 4 single products. After in-depth communication and learning with product development and sales departments, I redefined the concept of the product, optimized the packaging forms and materials, reduced product costs, and reorganized market strategies. Paying tribute to the world's famous paintings with the classic selection of freeze-drying technology and creating a brand new and fashionable brand image through the comic style, I independently designed the images, visuals, packaging design, and related promotional materials of this series, and delivered them for printing and arranged the transportation.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
