--- a/template/BaiduAntivirusWebsite.html
+++ b/template/BaiduAntivirusWebsite.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
     <link rel="stylesheet" href="../css/template.css">
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <title>Baidu Antivirus Website Design</title>
     <style>
         * {
@@ -195,7 +197,7 @@
         <div class="header">
             <div class="content_text_left">
                 <p>Baidu Antivirus Website</p>
-                <span>This project is to promote and download Baidu Antivires in overseas markets. The entire website is composed of product introductions, downloads, and web games. In this project, I was responsible for game character design, website design, user interaction, game flow design and visual effects etc.</span>
+                <span>This project is to promote and download Baidu Antivirus in overseas markets. The entire website is composed of product introductions, downloads, and web games. In this project, I was responsible for game character design, website design, user interaction, game flow design, and visual effects, etc.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
