--- a/template/SinaAutoAppPage.html
+++ b/template/SinaAutoAppPage.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
     <title>Sina Auto APP</title>
     <style>
@@ -187,8 +189,8 @@
         <!--头部 -->
         <div class="header">
             <div class="content_text_left">
-                <p>Sina Auto App</p>
-                <span>Sina auto is a functional application to establish contact between potential buyers and car dealers. The application includes various functions such as vehicle displays, group buying event activities, road drive test appointment booking, dealer contact, etc. As a member of the development team, I am responsible for work flows, user interaction, visual effects, test and debug of functions with developers.</span>
+                <p>Sina App Auto  Page</p>
+                <span>Sina App Auto Page is a functional application to establish contact between potential car buyers and car dealers. The application includes various functions such as vehicle displays, group buying activities, road drive test appointment, dealer introduction. As a member of the development team, I was responsible for workflows, user interaction, visual effects, test, and debug of functions with developers.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
@@ -204,26 +206,7 @@
         <!--中间内容 -->
         <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
             <div class="content"><img src="../static/SinaAuto/SinaAuto.png" alt=""></div>
-            <!--<div class="part1">
-                <div class="item"><img src="../static/info (1).jpg" alt=""></div>
-                <div class="item"><img src="../static/info (2).jpg" alt=""></div>
-            </div>
-            <div class="part2"><img src="../static/info (1).png" alt=""></div>
-             自动播放autoplay=1
-            <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
-        </div>
-         底部
-        <div class="other">Other Projects
-        </div>
-        <div class="foot" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="item"><img src="../static/other.png" alt=""></div>
-            <div class="item"><img src="../static/other.png" alt=""></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-        </div>
-    </div>-->
+
 </body>
 
 </html>
