--- a/template/SpaceSnack.html
+++ b/template/SpaceSnack.html
@@ -6,25 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="../js/index.min.js"></script>
-    <!-- <link rel="stylesheet" href="../css/tempalta.css"> -->
+    <script src="../js/swiper-3.4.2.min.js"></script>
+    <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
     <title>Space Snack Packaging</title>
     <style>
-         * {
+        * {
             padding: 0;
             margin: 0;
         }
-
+        
          ::selection {
             /*background: #fff100;
             color: rgb(0, 0, 0);*/
         }
-
+        
         .cpage {
             width: 100%;
             height: 100%;
             /* border: 1px solid green; */
         }
-
+        
         .header {
             padding-top: .438rem;
             padding-bottom: 0.25rem;
@@ -34,31 +35,31 @@
             overflow: hidden;
             justify-content: space-between;
         }
-
+        
         .content_text_right {
-            margin-left:.225rem;
+            margin-left: .225rem;
             width: 3.75rem;
         }
-
+        
         .header div {
             display: flex;
             flex-direction: column;
             align-items: start;
             justify-content: flex-start;
         }
-
+        
         .header div p {
             font: 500 .125rem "Roboto";
             color: black;
             text-height: 130%;
         }
-
+        
         .header div span {
             font: 300 .1rem "Roboto";
             columns: #4a4a44;
             line-height: 135%;
         }
-
+        
         .middle {
             box-sizing: content-box;
             width: 100%;
@@ -67,7 +68,7 @@
             /* 子页面背景
             background-color: #ffffff;*/
         }
-
+        
         .middle .banner {
             margin-top: .35rem;
             padding-top: .325rem;
@@ -76,14 +77,14 @@
             /*height: 500px;
             background-color: #777777;*/
         }
-
+        
         .middle .banner img {
             display: block;
             margin: 0 auto;
             /* width: 100%;
             height: 100%; */
         }
-
+        
         .middle .lr {
             margin-top: .15625rem;
             display: flex;
@@ -92,47 +93,47 @@
             flex-direction: column;
             justify-content: space-between;
         }
-
+        
         .lr .item {
             width: 100%;
             height: 2.734375rem;
         }
-
+        
         .lr .item div {
             width: 48%;
             height: 2.734375rem;
             /*background-color: #777777;*/
         }
-
+        
         .lr .content_left {
             display: flex;
             /*justify-content: flex-start;*/
-            justify-content:space-between;
+            justify-content: space-between;
             margin-bottom: 0.2rem;
         }
-
+        
         .lr .content_right {
             display: flex;
             justify-content: flex-end;
         }
-
+        
         .part1 .item img {
             width: Auto;
             height: Auto;
         }
-
+        
         .content {
             width: 90%;
             margin: 0 auto;
             height: Auto;
             margin-top: .195313rem;
         }
-
+        
         .content img {
             width: 100%;
             height: 100%;
         }
-
+        
         .part3 {
             width: 100%;
             height: 12.5rem;
@@ -140,7 +141,7 @@
             margin-top: .195313rem;
             margin-bottom: 0.5rem;
         }
-
+        
         .other {
             margin-top: 96px;
             font: 500 .125rem "Roboto";
@@ -149,7 +150,7 @@
             height: 100px;
             line-height: 170px;
         }
-
+        
         .footer {
             width: 90%;
             margin: 0 auto;
@@ -159,11 +160,11 @@
             flex-wrap: wrap;
             /*background-color: rgba(238, 238, 238);*/
         }
-
+        
         .footer .item {
             box-sizing: border-box;
             width: 33.333333%;
-           /* height: 2.34375rem; */
+            /* height: 2.34375rem; */
         }
         
         .footer .item img {
@@ -175,9 +176,75 @@
             width: 100%;
             height: 100%;
         }
+        /* ************************************************* */
         
-        .footer .item:hover {
-            /* background-color: #fff100; */
+        .swiper_ {
+            width: 100%;
+            height: 97%;
+        }
+        
+        .swiper_item {
+            width: 100%;
+            height: 95%;
+            overflow: hidden;
+            background-color: greenyellow;
+            color: rgb(255, 47, 57);
+        }
+        
+        .swiper_item img {
+            width: 100%;
+            height: 100%;
+        }
+        
+        .swiper_1 {
+            padding: 20px;
+            padding-top: 0;
+            padding-bottom: 0;
+            border-radius: 10px;
+            left: 46%;
+            transform: translateX(-450px);
+            bottom: -20vh;
+            position: absolute;
+            margin: 20px;
+            background-color: #f3f3f3;
+            opacity: 0;
+            width: 1024px;
+            height: 768px;
+            box-shadow: #c7c7c7 0px 0px 18px;
+        }
+        
+        .close {
+            margin-left: 922px;
+            width: 23px;
+            height: 23px;
+        }
+        
+        .close img {
+            width: 100%;
+            height: 100%;
+        }
+        
+        .swiper-button-prev {
+            background-image: url("../static/ht.png");
+            width: 44px;
+            height: 44px;
+            background-size: 44px 44px;
+        }
+        
+        .swiper-button-next {
+            background-image: url("../static/qj.png");
+            background-size: 44px 44px;
+            width: 44px;
+            height: 44px;
+        }
+        
+        .swiper_content {
+            margin-top: -400vh;
+            width: 100%;
+            height: 500vh;
+            position: absolute;
+            display: none;
+            background: rgb(255, 255, 255);
         }
     </style>
 </head>
@@ -188,7 +255,8 @@
         <div class="header">
             <div class="content_text_left">
                 <p>Space Snack</p>
-                <span>Space snack is a product that has been sold in the market. According to the current sales situation, while maintaining the product image, I reuse the existing visual graphics of the product, develop and design other packaging display forms, and according to the requirements of different sellers as Dollarama, customized its packaging.</span>
+                <span>
+Space Snack is a product already on the market. According to the current sales situation, while maintaining the product image, I developed and designed other packaging display forms for this product by reusing the existing visual graphics of the product and adding new content. And based on the requirements of different vendors, I customized exclusive packaging for different vendors.</span>
                 <span><br>Work details available upon request.</span>
             </div>
             <div class="content_text_right">
@@ -203,7 +271,8 @@
             </div>
         </div>
         <!--中间内容 -->
-        <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
+        <!-- <div class="middle" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()> -->
+        <div>
             <div class="content"><img src="../static/SpaceSnack/Spacesnack.png" alt=""></div>
             <!--<div class="content"><img src="../static/ChildGainChews/childchews2.png" alt=""></div>
             <div class="part1">
@@ -214,18 +283,125 @@
             <!-- 自动播放autoplay=1
             <div class="part3"><iframe style="width:84vw; height: 300px; margin: 0 auto;" src="//player.bilibili.com/player.html?rel=0&amp;autoplay=0&aid=456477115&bvid=BV1A5411a75j&cid=215266659&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
         </div>-->
-        <!-- 底部 -->
-        <div class="other">Other Projects
-        </div>
-        <div class="footer" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-            <div class="item"><a href="../template/TheTributetoClassic.html"><img src="../static/other.png" alt=""></a></div>
+            <!-- 底部 -->
+            <div class="other">Other Projects</div>
+            <div class="footer" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
+                <div onclick="open_swiper('flg_1')" class="item"><img src="../static/other.png" alt=""></div>
+                <div onclick="open_swiper('flg_2')" class="item"><img src="../static/other.png" alt=""></div>
+                <div onclick="open_swiper('flg_3')" class="item"><img src="../static/other.png" alt=""></div>
+            </div>
 
-            <!--<div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>-->
+            <div class='swiper_content' id="swiper_content"></div>
+            <!-- t1 第几个模板文件  t1_1第几个swiper eg: t1_1_1 第一个模板下第一个是swiper的第一张图 -->
+            <div class="swiper_1" id="flg_1">
+                <div class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></div>
+                <div class="swiper-container swiper-container_0 swiper_">
+                    <div class="swiper-wrapper">
+                        <!--  增加swiper-slide 增加图片数量  -->
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_1.png" alt=""></div>
+                        </div>
+                        <!--  -->
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_2.png" alt=""></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_3.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination swiper-pagination_1"></div>
+                    <div class="swiper-button-prev swiper-button-prev_1"></div>
+                    <div class="swiper-button-next swiper-button-next_1"></div>
+                </div>
+            </div>
+
+            <!-- -------------------------------------这是一整个swiper--------------------------------------------- -->
+            <div class="swiper_1" id="flg_2">
+                <span class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></span>
+                <div class="swiper-container swiper-container_1 swiper_">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_1.png" alt=""></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_2.png" alt=""></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_3.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination swiper-pagination_2"></div>
+                    <div class="swiper-button-prev swiper-button-prev_2"></div>
+                    <div class="swiper-button-next swiper-button-next_2"></div>
+                </div>
+            </div>
+            <!-- -------------------------------------这是一整个swiper----------------------------------------- -->
+            <div class="swiper_1" id="flg_3">
+                <span class="close" id='close' onclick="close_swiper()"><img src="../static/gb.png" alt=""></span>
+                <div class="swiper-container swiper-container_2 swiper_">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_1.png" alt=""></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_2.png" alt=""></div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper_item"><img src="../static/swiper/t1/t1_1_3.png" alt=""></div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination swiper-pagination_3"></div>
+                    <div class="swiper-button-prev swiper-button-prev_3"></div>
+                    <div class="swiper-button-next swiper-button-next_3"></div>
+                </div>
+            </div>
+
+
         </div>
-    </div>
+
+
+
+        <script>
+            var mySwiper = new Swiper('.swiper-container_0', {
+                loop: true,
+                pagination: '.swiper-pagination_1',
+                nextButton: '.swiper-button-next_1',
+                prevButton: '.swiper-button-prev_1',
+            })
+            var mySwiper_1 = new Swiper('.swiper-container_1', {
+                loop: true,
+                pagination: '.swiper-pagination_2',
+                nextButton: '.swiper-button-next_2',
+                prevButton: '.swiper-button-prev_2',
+            })
+            var mySwiper_2 = new Swiper('.swiper-container_2', {
+                loop: true,
+                pagination: '.swiper-pagination_3',
+                nextButton: '.swiper-button-next_3',
+                prevButton: '.swiper-button-prev_3',
+            })
+
+
+            var swiper_arr = document.getElementsByClassName("swiper_1")
+
+            function open_swiper(flg_id) {
+                for (var i = 0; i < swiper_arr.length; i++) {
+                    swiper_arr[i].style.display = 'none'
+                }
+                document.getElementById('swiper_content').style.display = 'block'
+                document.getElementById(flg_id).style.display = "block"
+                document.getElementById(flg_id).style.bottom = '12vh'
+                document.getElementById(flg_id).style.opacity = 1
+
+            }
+
+            function close_swiper() {
+                for (var i = 0; i < swiper_arr.length; i++) {
+                    swiper_arr[i].style.display = 'none'
+                }
+                document.getElementById('swiper_content').style.display = 'none'
+            }
+        </script>
 </body>
 
 </html>
