--- a/template/SpaceSnack.html
+++ b/template/SpaceSnack.html
@@ -201,20 +201,20 @@
             padding-top: 0;
             padding-bottom: 0;
             border-radius: 10px;
-            left: 8.5vh;
+            right: -9.5vh;
             transform: translateX(-450px);
             bottom: -16vh;
             position: absolute;
             margin: 20px;
             background-color: #f3f3f3;
             opacity: 0;
-            width: 25vh;
-            height: 17vh;
+            width: 22.5vh;
+            height: 14vh;
             box-shadow: #c7c7c7 0px 0px 18px;
         }
         
         .close {
-            margin-left: 25.5vh;
+            margin-left: 23vh;
             width: 23px;
             height: 23px;
         }
@@ -277,7 +277,7 @@
 
             <div class="other">Other Projects</div>
             <div class="footer" oncontextmenu="return false" onselectstart="return false"   ondragstart="return false" onbeforecopy="return false" oncopy=document.selection.empty() onselect=document.selection.empty()>
-                <div onclick="open_swiper('flg_1')" class="item"><img src="../static/SweetGala/sweetgala.png" alt=""></div>
+                <div onclick="open_swiper('flg_1')" class="item"><img src="../static/SweetGala/Sweetgala.png" alt=""></div>
                <!-- <div onclick="open_swiper('flg_2')" class="item"><img src="../static/SweetGala/sweetgala.png" alt=""></div>
                 <div onclick="open_swiper('flg_3')" class="item"><img src="../static/other.png" alt=""></div>-->
             </div>
@@ -290,14 +290,14 @@
                     <div class="swiper-wrapper">
                         <!--  增加swiper-slide 增加图片数量  -->
                         <div class="swiper-slide">
-                            <div class="swiper_item"><img src="../static/SweetGala/sweetgala1.png" alt=""></div>
+                            <div class="swiper_item"><img src="../static/SweetGala/Sweetgala1.png" alt=""></div>
                         </div>
                         <!--  -->
                         <div class="swiper-slide">
-                            <div class="swiper_item"><img src="../static/SweetGala/sweetgala2.png" alt=""></div>
+                            <div class="swiper_item"><img src="../static/SweetGala/Sweetgala2.png" alt=""></div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="swiper_item"><img src="../static/SweetGala/sweetgala3.png" alt=""></div>
+                            <div class="swiper_item"><img src="../static/SweetGala/Sweetgala3.png" alt=""></div>
                         </div>
 
                     </div>
@@ -382,7 +382,7 @@
                 }
                 document.getElementById('swiper_content').style.display = 'block'
                 document.getElementById(flg_id).style.display = "block"
-                document.getElementById(flg_id).style.bottom = '2.5vh'
+                document.getElementById(flg_id).style.bottom = '3.55vh'
                 document.getElementById(flg_id).style.opacity = 1
 
             }
