--- a/template/SpaceSnack.html
+++ b/template/SpaceSnack.html
@@ -147,8 +147,8 @@
             font: 500 .125rem "Roboto";
             width: 100vw;
             margin: 0 auto;
-            height: 100px;
-            line-height: 170px;
+            height: 90px;
+            line-height: 185px;
         }
         
         .footer {
@@ -197,24 +197,24 @@
         }
         
         .swiper_1 {
-            padding: 20px;
+            padding: .25rem;
             padding-top: 0;
             padding-bottom: 0;
-            border-radius: 10px;
-            right: -9.5vh;
-            transform: translateX(-450px);
-            bottom: -16vh;
+            border-radius: 0.075rem;
+            left: 3.125rem;
+            transform: translateX(-3.33rem);
+            bottom: 2.5rem;
             position: absolute;
-            margin: 20px;
+            margin: 0.65rem;
             background-color: #f3f3f3;
             opacity: 0;
-            width: 22.5vh;
-            height: 14vh;
-            box-shadow: #c7c7c7 0px 0px 18px;
+            width: 8.8rem;
+            height: 6rem;
+            box-shadow: #c7c7c7 0rem 0rem .1rem;
         }
         
         .close {
-            margin-left: 23vh;
+            margin-left: 9.075rem;
             width: 23px;
             height: 23px;
         }
@@ -382,7 +382,7 @@
                 }
                 document.getElementById('swiper_content').style.display = 'block'
                 document.getElementById(flg_id).style.display = "block"
-                document.getElementById(flg_id).style.bottom = '3.55vh'
+                document.getElementById(flg_id).style.bottom = '2.25vh'
                 document.getElementById(flg_id).style.opacity = 1
 
             }
